fix(settings): replace overlayscrollbars with simplebar

--- a/assets/reset.scss
+++ b/assets/reset.scss
@@ -43,6 +43,10 @@
   width: 8px !important;
 }
 
+.narrow-scrollbar .simplebar-track {
+  width: 8px !important;
+}
+
 b {
   font-weight: 600 !important;
 }
